# ChangeLog for dev-lang/scala
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/scala/ChangeLog,v 1.15 2009/04/30 19:29:39 ali_bush Exp $

*scala-2.7.4 (30 Apr 2009)

  30 Apr 2009; Alistair Bush <ali_bush@gentoo.org> +scala-2.7.4.ebuild:
  Version Bump to 2.7.4.

  14 Feb 2009; Alistair Bush <ali_bush@gentoo.org> scala-2.7.3-r1.ebuild:
  Add block on scala-bin. see #247401.

  14 Feb 2009; Alistair Bush <ali_bush@gentoo.org> scala-2.7.3-r1.ebuild:
  Adding PDEPEND on app-emacs/scala-mode. Thanks go to ulm.

*scala-2.7.3-r1 (11 Feb 2009)

  11 Feb 2009; Alistair Bush <ali_bush@gentoo.org>
  +files/scala-2.7.3-build.xml.patch, +scala-2.7.3-r1.ebuild:
  Updated to fix issues raised in #250688. Thanks abachn.

  05 Feb 2009; Alistair Bush <ali_bush@gentoo.org> scala-2.7.3.ebuild:
  Fixed #257581.

*scala-2.7.3 (18 Jan 2009)

  18 Jan 2009; Alistair Bush <ali_bush@gentoo.org> +scala-2.7.3.ebuild:
  Version Bump

*scala-2.7.2 (11 Jan 2009)

  11 Jan 2009; Alistair Bush <ali_bush@gentoo.org> +scala-2.7.2.ebuild:
  Version Bump.

  23 Aug 2008; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Add GLEP 56 USE flag descriptions.

*scala-2.6.1-r1 (09 Feb 2008)

  09 Feb 2008; Petteri Räty <betelgeuse@gentoo.org> +scala-2.6.1-r1.ebuild:
  Remove quoting for Xbootclasspath as it doesnt work with latest java-config.
  The quotes arent needed because the path cant contain spaces. Fixes bug

*scala-2.6.1 (21 Jan 2008)

  21 Jan 2008; Vlastimil Babka <caster@gentoo.org>
  -files/scala-2.4.0-build.xml.patch, -files/scala-2.5.1-build.xml.patch,
  +files/scala-2.6.1-build.xml.patch, -scala-2.4.0.ebuild,
  -scala-2.5.1.ebuild, +scala-2.6.1.ebuild:
  Version bump. bug #202988. Add local binary USE flag to workaround memory
  requirements without need of separate scala-bin package, bug #181390.

*scala-2.6.0 (17 Dec 2007)

  17 Dec 2007; Caleb Tennis <caleb@gentoo.org>