@@ -9,6 +9,7 @@ DIST scala-2.7.4-gentoo-binary.tar.bz2 13664162 RMD160 61e514e90d58ddd584c37ec96
 DIST scala-2.7.4.final-sources.tgz 29500833 RMD160 1305974e084135a7ab2597d2dd5e7724667d7659 SHA1 cec8a9ee65f8f48026db0a77f77182bc8b76986e SHA256 3c2c92af6a9994c18a38c3fa6e2c3e65de9c06bff9d59e8c1e63e45965c7ac11
 EBUILD scala-2.6.1-r1.ebuild 3865 RMD160 e729ceb6502657f48c2b0cd3bc096596c6513d28 SHA1 40351df311cc67c25b2d1f6111bdbec88fec33ab SHA256 67a0216580e342de45a8d99882fbfeeb2e883ddf6bbda144eb7df86441427cc5
 EBUILD scala-2.7.3-r1.ebuild 3441 RMD160 64bd4637090ea4ce539802abe88f0eca1beb76a1 SHA1 d004cabe7a982731ed1457f87401675af31e40ed SHA256 ded4a883ee53814b131073a9501a6a14410584d47bfabff8811dd7a09b83fc2e
+EBUILD scala-2.7.4-r1.ebuild 3358 RMD160 9b8196ff0ac016476bbd857136bfc160c71b40a3 SHA1 deb8a2df84d56720a6f54e476a6d11bae3f18e28 SHA256 b80788aac3ddd1744a45b91307d407ca3557b9cef2e1da8d65de5987942f245b
 EBUILD scala-2.7.4.ebuild 3474 RMD160 2776be922fa31a02a6a81f62a901414d58b406c3 SHA1 e2b371e181c203ca02a4cf298372caa2389ad1f1 SHA256 ca16e04cc65d56593d4c9d691727d6f2353a004790ab2fa57e298695c298f55c
-MISC ChangeLog 2871 RMD160 002148b777b3d86010ad706e31bf53339709e281 SHA1 d34a142b4e86a105704e55fe67366efdb8c1585b SHA256 601971d1e07bf1a9a36da8a760ab59013d23066fc9282ccbba291dc2dce85c93
+MISC ChangeLog 3027 RMD160 371228ec0244d226141c2dbe3774e7859594deb0 SHA1 aa5f0bbd6fd38fade5ada242612baeba8f5175d0 SHA256 f479cf1cf9174d346e52561bfca6b72e86adc4554f9bbc4e99fa1afbcb923e15
 MISC metadata.xml 317 RMD160 c068d6e3d0806587dc6262bd8162709fbd18b25e SHA1 d68298cc52c736cb3a300197daa86cf6d4618656 SHA256 9ec2b0918811b14be0850dabea428b6b976e7eae70e97f281f85533d4e66bc94
